fix(tab): hide scrollbar
fix #2935

--- a/packages/tabs/index.less
+++ b/packages/tabs/index.less
@@ -28,6 +28,10 @@
     &--card {
       .theme(margin, '0 @padding-md');
     }
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__nav {
